# minecraft

./: CMakeLists.txt  README.md
src/main/: main.c
src/main/engine/: input.h  logger.h  memory.c  memory.h  runtime.c  runtime.h  window.h
src/main/engine/collection/: linkedlist.h  list.h
src/main/engine/core/: defines.h  strings.c  strings.h  types.h
src/main/engine/event/: dispatcher.h  event.h  listener.h  types.h
